# animal_classifier

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.properties  pyproject.toml
animal_classifier/: __main__.py  cli.py  dataset.py  loss.py  model.py  training.py
animal_classifier/api/: handler.py
animal_classifier/api/model/: handler.py
animal_classifier/api/proxy/: service.py
animal_classifier/api/proxy/base_types/: animal_response.py  base64_image.py  config.py  label_source.py  proxy_config.py
animal_classifier/api/proxy/utils/: __init__.py  process_request.py  update_traffic.py
animal_classifier/cfg/: __init__.py  config.py
animal_classifier/datasets/: __init__.py  dataset.py
animal_classifier/losses/: __init__.py  loss.py
animal_classifier/models/: __init__.py  model.py  state_info.py
animal_classifier/utils/: enums.py  image_size.py  package_metadata.py  testing.py
config/: config.json  last_training.json
docker/: Dockerfile  Dockerfile.fastapi  Dockerfile.torchserve
scripts/: build_docker.sh  run-pre-commits-and-tests-locally.sh  serve.sh  serve_fastapi.sh  serve_torchserve.sh  setup-local-hooks.sh
tests/: conftest.py  test_cli.py  test_dataset.py  test_main.py  test_model.py  test_training.py
tests/test_api/: test_handler.py
tests/test_api/test_model/: test_handler.py
tests/test_api/test_proxy/: test_service.py
tests/test_api/test_proxy/test_base_types/: test_proxy_config.py
tests/test_api/test_proxy/test_utils/: test_process_request.py  test_update_traffic.py
tests/test_api/test_torchserve/: test_handler.py
tests/test_cfg/: test_config.py
tests/test_config/: test_config.py
tests/test_datasets/: test_dataset.py
tests/test_models/: test_model.py
tests/test_utils/: test_enums.py
